web/src/routes/root/index.css
@import "https://unpkg.com/open-props";
@import "https://unpkg.com/open-props/gray-hsl.min.css";

.theme-light {
  --bg-primary: var(--gray-1);
  --bg-secondary: var(--gray-3);
  --text-primary: var(--gray-8);
  --text-secondary: var(--gray-7);
  --text-3: var(--gray-5);
  --border-color: var(--gray-5);
}

.theme-dark {
  --bg-primary: var(--gray-8);
  --bg-secondary: var(--gray-7);
  --text-primary: var(--gray-3);
  --text-secondary: var(--gray-4);
  --text-3: var(--gray-6);
  --border-color: var(--gray-6);
}

/* TODO: investigate if we can inherit */
@media (prefers-color-scheme: dark) {
  .theme-system {
    --bg-primary: var(--gray-8);
    --bg-secondary: var(--gray-7);
    --text-primary: var(--gray-3);
    --text-secondary: var(--gray-4);
    --text-3: var(--gray-6);
    --border-color: var(--gray-6);
  }
}

@media (prefers-color-scheme: light) {
  .theme-system {
    --bg-primary: var(--gray-1);
    --bg-secondary: var(--gray-3);
    --text-primary: var(--gray-8);
    --text-secondary: var(--gray-7);
    --text-3: var(--gray-5);
    --border-color: var(--gray-5);
  }
}

.App {
  text-align: center;
  display: flex;
  background-color: var(--bg-primary);
  color: var(--text-primary);
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
}

.App-logo {
  height: 40vmin;
  pointer-events: none;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }

  to {
    transform: rotate(360deg);
  }
}

.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-link {
  color: #61dafb;
}

.sidemenu {
  width: 260px;
  padding: 10px;
  border: 1px solid rgba(255, 255, 255, .2);
  background-color: var(--bg-primary);
  display: flex;
  flex-direction: column;
}

.sidemenu ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.sidemenu li {
  list-style: none;
  width: 100%;
}

.sidemenu a {
  color: unset;
  text-decoration: none;
}

.conv-list {
  display: flex;
  /* min-height: 100%; */
  flex-direction: column;
  overflow: auto;
  scrollbar-color: var(--border-color) transparent;
  scrollbar-width: thin;
}

.sidemenu-date-group {
  color: var(--text-3);
  text-align: start;
  margin: 10px;
  margin-top: 20px;
}

.sidemenu-button {
  height: 2rem;
  margin: 2px;
  padding: 3px;
  background-color: var(--bg-primary);
  color: var(--text-primary);
  border: none;
  border-radius: 5px;
  transition: ease 0.25s all;
  display: flex;
  flex-direction: row;
  align-items: center;
}

.sidemenu-button:hover {
  background-color: var(--bg-secondary);
}

.sidemenu-button.active {
  background-color: var(--bg-secondary);
}

.sidemenu-bottom {
  margin-top: auto;
  width: 90%;
  border: 1px solid var(--border-color);
}

.sidemenu-bottom-group {
  margin: 1rem;
  display: flex;
}

.sidemenu-bottom-group-items {
  margin: 0.5rem;
}

.chatbox {
  display: flex;
  flex-direction: column;
  flex-grow: 1;
  overflow: auto;
  scroll-behavior: smooth;
  scrollbar-color: var(--border-color) transparent;
  scrollbar-width: thin;
  border: 1px solid var(--border-color);
  background-color: var(--bg-secondary);
  position: relative;
}

/*
 * Add loading will break the dialog now
 * Need to investigate more
 * See <https://developer.mozilla.org/en-US/docs/Web/HTML/Element/dialog>
 */
/* .chatbox.loading {
  opacity: 0.25;
  transition: opacity 200ms;
  transition-delay: 200ms;
} */

.del-dialog {
  width: 25vw;
  color: var(--text-primary);
  background-color: var(--bg-primary);
  border: none;
  border-radius: 5px;
}

.del-dialog-content {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  margin: 2rem;
}

.del-dialog-content>label {
  margin: 0.5rem;
}

.del-dialog-content>input {
  margin: 0.5rem;
  outline: 0;
  border-width: 0 0 2px;
  color: var(--text-primary);
  background-color: var(--bg-primary);
}

.del-dialog-actions {
  margin-top: auto;
  display: flex;
  flex-direction: row-reverse;
}

.del-dialog-actions>button {
  color: var(--text-primary);
  background-color: var(--bg-secondary);
  border: unset;
  border-radius: 5px;
  margin: 5px;
  padding: 10px;
}

